# nvmedirect

./: .gitignore  CMakeLists.txt  README.md
modules/: Makefile  build-module.sh
src/: nvmedirect-io.cpp
